# QtDICOMViewer

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  QtDICOMViewer.sln  QtDICOMViewer.vcxproj  QtDICOMViewer.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
QtDICOMViewer_autogen/include_Release/: ui_mainwindow.h
QtDICOMViewer_autogen/include_Release/6YEA5652QU/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
assets/img/: IM0000.dcm
forms/: MainWindow.ui
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
